--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,8 @@
 		"incremental": true,
 		"tsBuildInfoFile": "out/tsconfig.tsbuildinfo",
 		"declaration": true
-	}
+	},
+	"exclude": [
+		"./src/**/*.spec.ts"
+	]
 }
